--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
 <body>
   <h1>Yelp API</h1>
   <hr />
-  <h3>Restarants</h3>
+  <h3>Restaurants</h3>
   <p>GET all</p>
   <a
     href="https://yelp-backend546.herokuapp.com/restaurants">https://yelp-backend546.herokuapp.com/restaurants</a>
   <br /><br />
   <p>GET one restaurant</p>
-  <p>https://yelp-restaurant-api.herokuapp.com/restaurant/:id</p>
+  <p>https://yelp-backend546.herokuapp.com/restaurants/:id</p>
   <br /><br />
   
 </body>
